--- a/main.html
+++ b/main.html
@@ -7,6 +7,22 @@
 </head>
 
 <body>
+
+	<nav>
+		this is nav bar for navigation
+	</nav>
+	
+	<h1>Hello World</h1>
+	<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQO8AAxAr9ZNr9JCwn2QZ35rSWWuiayhh0ayQ&s" alt="this is imageTag" />
+
+	<ul>
+		<li>Home</li>
+		<li>About Us</li>
+		<li>Contact Us</li>
+		<li>Careers</li>
+	</ul>
+	
+	
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
